SUBDIRS =  src
include_HEADERS = nse.h
EXTRA_DIST =  data/NSE_pn_table_parser.c data/np_table.c data/isotopes.dat data/nse_tbl.h  data/G0.dat data/A.dat data/Z.dat data/N.dat data/Q.dat data/Ye.dat data/kT.dat data/lg_rho.dat data/GkT.dat data/N_Z_tbl.dat src/NSE_pn_table_generator.nb src/NSE_pn_table_explorer.nb
ACLOCAL_AMFLAGS = -I m4